# ShellVM

./: .gitignore  CMakeLists.txt  README.md  main.cpp
VM/: CMakeLists.txt
VM/include/: vm.hpp
VM/src/: code.cpp  reader.cpp  runtime.cpp  vm.cpp
VM/test/: CMakeLists.txt  reader_tests.cpp
VM/test/test_data/: example.slime
include/: vm.hpp
src/: allocator.cpp  code.cpp  jit.cpp  process.cpp  reader.cpp  runtime.cpp  translator.cpp  vm.cpp
test/: CMakeLists.txt  allocator_tests.cpp  link_tests.cpp  object_tests.cpp  reader_tests.cpp
test/test_data/: example.slime
